# notifier

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  auth.lambda.toml  build_deploy_lambda.sh  config.toml  conftest.py  docker-compose.test.yml  dumps.py  lambda_function.py  pyproject.toml  zip_lambda.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: auth.ci.toml
.github/workflows/: static.yml  tests.yml
config/: auth.ci.toml  auth.compose.toml  config.toml  lang.toml
docs/: auth.md  database.md  deployment.md
notifier/: __init__.py  __main__.py  cli.py  composer.py  database.py  databasequeries.py  deletions.py  digest.py  dumps.py  emailer.py  formatter.py  lang.toml  main.py  newposts.py  notify.py  overrides.py  parsethread.py  secretgetter.py  tasks.py  timing.py  types.py  userconfig.py  wikiconnection.py  wikidot.py
notifier/config/: local.py  remote.py  tool.py  user.py
notifier/database/: driver.py  utils.py
notifier/database/drivers/: __init__.py  base.py  mysql.py  sqlite.py
notifier/database/migrations/: 000-create-tables.down.sql  000-create-tables.up.sql  000-track-migrations.up.sql  001-track-first-post-id-in-thread.down.sql  001-track-first-post-id-in-thread.up.sql  001-track-first-post-id-per-thread.down.sql  001-track-first-post-id-per-thread.up.sql  001-track-thread-first-post.up.sql  002-track-user-config-tags.down.sql  002-track-user-config-tags.up.sql  003-index-manual-subs.down.sql  003-index-manual-subs.up.sql  003-store-public-log-dumps.down.sql  003-store-public-log-dumps.up.sql  004-store-public-log-dumps.up.sql  005-merge-user-config-and-last-notified-tables.down.sql  005-merge-user-config-and-last-notified-tables.up.sql  006-index-post-author.down.sql  006-index-post-author.up.sql  007-remove-global-overrides.down.sql  007-remove-global-overrides.up.sql  008-store-partial-public-log-dumps.down.sql  008-store-partial-public-log-dumps.up.sql  009-split-post-context.down.sql  009-split-post-context.up.sql  010-track-latest-timestamp-per-wiki.down.sql  010-track-latest-timestamp-per-wiki.up.sql  011-clear-wikidot-thread-creator.down.sql  011-clear-wikidot-thread-creator.up.sql  README.md
notifier/database/queries/: _scrub.sql  add_context_wiki.sql  add_wiki.sql  add_wiki_alias.sql  cache_notifiable_post_context.sql  cache_post_context.sql  check_post_exists.sql  check_thread_exists.sql  check_would_email.sql  count_supported_wikis.sql  count_user_configs.sql  create_tables.script.sql  delete_context_thread.sql  delete_manual_subs.sql  delete_manual_subs_for_user.sql  delete_non_notifiable_posts.sql  delete_overrides.sql  delete_post.sql  delete_unused_post_context.sql  delete_user_config.sql  delete_user_configs.sql  delete_wikis.sql  get_activation_log_dumps.sql  get_auto_sub_posts_for_user.sql  get_auto_sub_threads_for_user.sql  get_channel_log_dumps.sql  get_global_overrides.sql  get_last_search_time.sql  get_latest_post_timestamp.sql  get_manual_subs_for_user.sql  get_migration_version.sql  get_notifiable_posts_for_user.sql  get_notifiable_users.sql  get_post_children.sql  get_posts_in_subscribed_threads.sql  get_posts_to_check_for_deletion.sql  get_replies_to_subscribed_posts.sql  get_supported_wikis.sql  get_user_configs_for_frequency.sql  get_user_configs_from_frequency.sql  (+25 more)
stats-frontend/: graphs.html  index.html  package.json  status.html
stats-frontend/assets/: createResizeIframe.js  sample_notifications.json
stats-frontend/assets/sample-notifications/: couldnt-start-notifying.json  last-activation-early-finish.json  last-activation-unfinished.json  last-channel-unfinished.json  prior-channel-unfinished.json
tests/: benchmark.sh  init.sql  make_sample_digest.py  run_tests.sh  test_database.py  test_deletions.py  test_digest.py  test_dumps.py  test_formatter.py  test_newposts.py  test_parsethread.py
