[tool.poetry]
name = "notifier"
version = "0.0.0"
description = "Wikidot notifications"
authors = ["Ross Williams <rossjrw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "^3.7.0"
requests = "^2.26.0"
bs4 = "^0.0.1"
tomlkit = "^0.7.2"
pycron = "^3.0.0"
feedparser = "^6.0.8"
emoji = "^1.4.2"
yagmail = {extras = ["all"], version = "^0.14.256"}
SecretStorage = "^3.3.1"
pymysql = "^1.0.3"
boto3 = "^1.26.160"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.19.13"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pytest = "^6.2.4"
isort = "^5.9.2"
pylint = "^2.9.6"
mypy = "^0.910"
boto3-stubs = "^1.21.30"
types-beautifulsoup4 = "^4.12.0.5"
types-requests = "^2.31.0.1"
typing-extensions = "^4.6.3"
types-emoji = "^2.1.0.3"
types-pymysql = "^1.0.19.7"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pylint.messages_control]
disable = [
  "invalid-name", # oh sorry did I forget to uppercase?
  "missing-module-docstring", # filenames are good enough
  "redefined-outer-name", # for pytest
  "broad-except", # I understand the risks, but sometimes this is useful
  "line-too-long", # black can handle itself
  "consider-using-f-string", # f strings are way too brittle in 3.9
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "yagmail.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pycron.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomlkit.*"
implicit_reexport = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
